--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <nav class="flex bg-[#281a69] text-white items-center justify-between px-30 py-5 border-b-1 border-[#ff6096]/20 sticky top-0">
-        <span class="text-3xl font-bold">JBlog</span>
-        <ul class="flex text-xl gap-5">
-            <li><a href="">Home</a></li>
+        <span class="text-3xl font-bold"><a href="index.html">JBlog</a></span>
+        <ul class="flex text-xl gap-5" >
+            <li><a href="index.html">Home</a></li>
             <li><a href="">Blogs</a></li>
             <li><a href="">About Us</a></li>
             <li><a href="">Contact Us</a></li>
@@ -28,7 +28,7 @@
             <div class=" flex px-1 mt-2">
                 <div class="h-screen rounded-md bg-linear-to-b from-[#281a69]  to-[#ff6096] flex-1 px-20 text-white  pt-10 text-lg">
                     <ul>
-                        <li><a href="/create.html"> Create Post</a></li>
+                        <li><a href="/create.html">+ Create Post</a></li>
                     </ul>
                 </div>
                 <div id="blogList" class="flex-8 container mx-auto mt-10 px-4">
