--- a/create.html
+++ b/create.html
@@ -8,9 +8,9 @@
 </head>
 <body class="bg-[#281a69]">
     <nav class="flex bg-[#281a69] text-white items-center justify-between px-30 py-5 border-b-1 border-[#ff6096]/20 sticky top-0">
-        <span class="text-3xl font-bold">JBlog</span>
-        <ul class="flex text-xl gap-5" id="test">
-            <li><a href="">Home</a></li>
+        <span class="text-3xl font-bold"><a href="index.html">JBlog</a></span>
+        <ul class="flex text-xl gap-5" >
+            <li><a href="index.html">Home</a></li>
             <li><a href="">Blogs</a></li>
             <li><a href="">About Us</a></li>
             <li><a href="">Contact Us</a></li>
