--- a/post.html
+++ b/post.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/tailwindcss@2.0.0/dist/tailwind.min.js"></script>
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <script src="post_details.js"></script>
     <title>Blog Post Detail</title>
 </head>
-<body class="bg-gray-100">
+<body>
+
+    <nav class="flex bg-[#281a69] text-white items-center justify-between px-30 py-5 border-b-1 border-[#ff6096]/20 sticky top-0">
+        <span class="text-3xl font-bold"><a href="index.html">JBlog</a></span>
+        <ul class="flex text-xl gap-5" id="test">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="">Blogs</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Contact Us</a></li>
+        </ul>
+        <button class="bg-white rounded-full px-9 py-2 text-[#ff6096] font-bold">LogIn</button>
+    </nav>
 
     <div id="postDetail" class="container mx-auto mt-10 px-4">
         <!-- Post content will be displayed here -->
