changed path to fix error

--- a/create.html
+++ b/create.html
@@ -33,7 +33,7 @@
         </div>
         <button type="submit" class="font-medium bg-[#ff6096] text-white py-2 w-100 rounded-full">Create Post</button>
     </form>
-    <script src="/blog_details.js"></script>
+    <script src="blog_details.js"></script>
 
 </body>
 </html>
