--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <script src="/blog_details.js"></script>
+    <script src="blog_details.js"></script>
     <title>Blog</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
             <div class=" flex px-1 mt-2">
                 <div class="h-screen rounded-md bg-linear-to-b from-[#281a69]  to-[#ff6096] flex-1 px-20 text-white  pt-10 text-lg">
                     <ul>
-                        <li><a href="/create.html">+ Create Post</a></li>
+                        <li><a href="create.html">+ Create Post</a></li>
                     </ul>
                 </div>
                 <div id="blogList" class="flex-8 container mx-auto mt-10 px-4">
