chaged file organizing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <script src="blog_details.js"></script>
     <title>Blog</title>
 </head>
 <body>
@@ -34,5 +33,7 @@
                 <div id="blogList" class="flex-8 container mx-auto mt-10 px-4">
                 </div>
     </div>
+    <script src="blog.js"></script>
+
 </body>
 </html>
