--- a/post.html
+++ b/post.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <script src="post_details.js"></script>
     <title>Blog Post Detail</title>
 </head>
 <body>
@@ -20,9 +19,10 @@
         <button class="bg-white rounded-full px-9 py-2 text-[#ff6096] font-bold">LogIn</button>
     </nav>
 
-    <div id="postDetail" class="container mx-auto mt-10 px-4">
+    <div id="content" class="container mx-auto mt-10 px-4">
         <!-- Post content will be displayed here -->
     </div>
+    <script src="blog.js"></script>
 
 </body>
 </html>
